--- a/public/index.ejs
+++ b/public/index.ejs
@@ -197,16 +197,25 @@
         </blockquote>
       </div>
       <div class="col-md-3"></div>
-      <div class="col-md">
-        <div class="form-floating mb-3">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
-        </div>
-      </div>
+      <div class="col-md justify-content-center text-center">
+        <form action="/process-form" method="post">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Write your mail</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="message" rows="3"></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-outline-dark" target="_blank" type="submit"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                    Send mail
+                </button>
+            </div>
+        </form>
+    </div>
+    
       <div class="col-md-3"></div>
     </div>
   </div>
@@ -271,5 +280,3 @@ setProgressBarValue(progressBar5, progressBarFill5, 45);
   </body>
 
 </html>
-
-
