add hyper links

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -90,7 +90,9 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./picture/pexels-picography-4458.jpg" class="d-block w-100" alt="...">
+              <a href="https://roydebraj2003.github.io/Blog" target="_blank">
+                <img src="./picture/pexels-picography-4458.jpg" class="d-block w-100" alt="...">
+              </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
                   <p>Blog</p>
@@ -99,8 +101,11 @@
                 </blockquote>
               </div>
             </div>
+
             <div class="carousel-item">
-              <img src="./picture/pexels-mikael-blomkvist-6476587.jpg" class="d-block w-100" alt="...">
+              <a href="https://github.com/roydebraj2003" target="_blank">
+                <img src="./picture/pexels-mikael-blomkvist-6476587.jpg" class="d-block w-100" alt="...">
+              </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
                   <p>E-commerce Website</p>
@@ -109,8 +114,11 @@
                 </blockquote>
               </div>
             </div>
+
             <div class="carousel-item">
-              <img src="./picture/pexels-romka- -2034373.jpg" class="d-block w-100" alt="...">
+              <a href="https://github.com/roydebraj2003" target="_blank">
+                <img src="./picture/pexels-romka- -2034373.jpg" class="d-block w-100" alt="...">
+              </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
                   <p>???</p>
@@ -118,6 +126,7 @@
                 </blockquote>
               </div>
             </div>
+
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
             data-bs-slide="prev">
