--- a/public/style.css
+++ b/public/style.css
@@ -12,3 +12,19 @@ body {
       background-image: url('./picture/WhatsApp\ Image\ 2024-01-10\ at\ 19.37.51_2d11fefe.jpg');
     }
 }
+.footer {
+  background-color: #000;
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+  position:relative;
+  bottom: 0px;
+  width: 100%;
+  border-top: 1px solid #333;
+  font-size: 14px;
+  box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.2);
+}
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
