--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,32 @@
 body {
-    background-image: url('/desktop-with-camera-office-accessories-circle.jpg'); /* Replace 'your-image-url.jpg' with the path or URL to your image */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* Fixed background */
-    height: 100vh;
-    margin: 0;
-  }
-  @media (max-width: 767px) {
-    body {
-      background-image: url('/WhatsApp\ Image\ 2024-01-10\ at\ 19.37.51_2d11fefe.jpg');
-    }
+  background-image: url('/desktop-with-camera-office-accessories-circle.jpg'); /* Replace 'your-image-url.jpg' with the path or URL to your image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Fixed background */
+  height: 100vh;
+  margin: 0;
 }
+
+@media (max-width: 767px) {
+  body {
+      background-image: url('/WhatsApp Image 2024-01-10 at 19.37.51_2d11fefe.jpg');
+  }
+}
+
 .footer {
   background-color: #000;
   color: #fff;
   padding: 15px;
   text-align: center;
-  position:relative;
+  position: relative;
   bottom: 0px;
   width: 100%;
   border-top: 1px solid #333;
   font-size: 14px;
   box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.2);
 }
+
 .footer a {
   color: #fff;
   text-decoration: none;
