--- a/public/style.css
+++ b/public/style.css
@@ -1,27 +1,29 @@
 body {
-  background-image: url('/desktop-with-camera-office-accessories-circle.jpg'); 
+  margin: 0;
+  overflow-x: hidden;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/desktop-with-camera-office-accessories-circle.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: 100vh;
-  margin: 0;
+  z-index: -1; /* Send the pseudo-element to the back */
 }
 
 @media (max-width: 767px) {
-  body {
+  body::before {
     background-image: url('./WhatsApp Image 2024-01-10 at 19.37.51_2d11fefe.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 100vh;
-    margin: 0;
   }
 }
 
 .footer {
   background-color: #000;
-  background-position: center;
   color: #fff;
   padding: 15px;
   text-align: center;
